force-app/main/default/objects/CommercientSF__GtrDetail__c/CommercientSF__GtrDetail__c.object-meta.xml
<CustomObject>
    <label>Syspro Inventory In Transit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Inventory In Transit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>