force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__Branch__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Branch__c</fullName>
    <description>Branch</description>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>