force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__CostUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CostUom__c</fullName>
    <description>CostUom</description>
    <label>Cost UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>