force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__DeliveryNote__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryNote__c</fullName>
    <description>DeliveryNote</description>
    <label>Delivery note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>