force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__ExpectedDueDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExpectedDueDate__c</fullName>
    <description>ExpectedDueDate</description>
    <label>Expected due date</label>
    <type>DateTime</type>
</CustomField>