force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__GtrQuantity__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GtrQuantity__c</fullName>
    <description>GtrQuantity</description>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>