force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__GtrReference__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GtrReference__c</fullName>
    <description>GtrReference</description>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>