force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__InitialValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InitialValue__c</fullName>
    <description>InitialValue</description>
    <label>Initial value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>