force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__LockFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LockFlag__c</fullName>
    <description>LockFlag</description>
    <label>Lock flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>