force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__NextEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextEntry__c</fullName>
    <description>NextEntry</description>
    <label>Next entry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>