force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__Product__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Syspro Inventory In Transit</relationshipLabel>
    <relationshipName>Syspro_Inventory_In_Transit</relationshipName>
    <type>Lookup</type>
</CustomField>