force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__QtyReceived__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyReceived__c</fullName>
    <description>QtyReceived</description>
    <label>Qty received</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>