force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__Release__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Release__c</fullName>
    <description>Release</description>
    <label>Release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>