force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOrder__c</fullName>
    <description>SalesOrder</description>
    <label>Sales order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>