force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__StockCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockCode__c</fullName>
    <description>StockCode</description>
    <label>Stockcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>