force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransactionDate__c</fullName>
    <description>TransactionDate</description>
    <label>Transaction date</label>
    <type>DateTime</type>
</CustomField>