force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__TransfCompPeriod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransfCompPeriod__c</fullName>
    <description>TransfCompPeriod</description>
    <label>Transfer complete period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>