force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__TransfCompYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransfCompYear__c</fullName>
    <description>TransfCompYear</description>
    <label>Transfer complete year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>