force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__TransfDocNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransfDocNum__c</fullName>
    <description>TransfDocNum</description>
    <label>Transfer document number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>