force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__TransferComplete__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransferComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TransferComplete</description>
    <label>Transfer complete</label>
    <type>Checkbox</type>
</CustomField>