force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__UnitCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UnitCost__c</fullName>
    <description>UnitCost</description>
    <label>Unit cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>