force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__ValueReceivedSrc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ValueReceivedSrc__c</fullName>
    <description>ValueReceivedSrc</description>
    <label>Value received source</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>