force-app/main/default/objects/CommercientSF__GtrDetail__c/fields/CommercientSF__ValueReceivedTgt__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ValueReceivedTgt__c</fullName>
    <description>ValueReceivedTgt</description>
    <label>Value received target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>